traditional way of making calculator

--- a/call_back.html
+++ b/call_back.html
@@ -10,7 +10,25 @@
     <h1>CALL BACK FUNCTIONS</h1>
 
     <script>
-        
+        // call back funtion is that type of function which basically take a function as an argument
+
+        // traditional way of making a calculator.
+        // we need to console.log() time and again
+        let sum (num1,num2) =>{
+            return Math.abs(num1+num2);
+        };
+
+        let sub(num1,num2) =>{
+            return Math.abs(num1-num2);
+        };
+
+        let mul(num1,num2)=>{
+            return Math.abs(num1*num2);
+        };
+
+        console.log1(mul(6,8));
+
+
     </script>
 </body>
 </html>
