--- a/call_back.html
+++ b/call_back.html
@@ -14,20 +14,28 @@
 
         // traditional way of making a calculator.
         // we need to console.log() time and again
-        let sum (num1,num2) =>{
+        let sum =(num1,num2) =>{
             return Math.abs(num1+num2);
         };
 
-        let sub(num1,num2) =>{
+        let sub =(num1,num2) =>{
             return Math.abs(num1-num2);
         };
 
-        let mul(num1,num2)=>{
+        let mul =(num1,num2)=>{
             return Math.abs(num1*num2);
         };
 
         console.log1(mul(6,8));
 
+
+        // this is how call back function works.
+        // sum() is called as an argument inside the calculator() function
+        const calculat = (num1,num2,operat) =>{
+            return operat(num1,num2);
+        };
+
+        console.log(calculat(4,5,sum));
 
     </script>
 </body>
